version/0.25/_sources/api/solver/_autosummary/settings/pressure_jump.rst.txt
:orphan:

.. _pressure_jump:

pressure_jump
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.pressure_jump.pressure_jump
    :show-inheritance:

.. rubric:: Attributes

==================================================   ============================================================

Attribute                                                                                                 Summary

==================================================   ============================================================
:ref:`option <option_18>`                                                               Select polynomial method.

:ref:`function_of <function_of>`                              Specify what variable this object is a function of.

:ref:`value <value_13>`                                                  Specify value as constant or expression.

:ref:`udf <udf_1>`                                                                         User defined function.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                 Piecewise polynomial settings.

:ref:`piecewise_linear <piecewise_linear_2>`             Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_2>`                                                             Polynomial settings.

==================================================   ============================================================

.. rubric:: Included in:

================================================================   =========================================

Parent                                                                                               Summary

================================================================   =========================================
:ref:`momentum <momentum>`                                                               Help not available.

:ref:`pressure_jump_specification <pressure_jump_specification>`       Pressure jump specification settings.

:ref:`momentum <momentum_2>`                                                             Help not available.

================================================================   =========================================

