version/0.28/_sources/api/solver/_autosummary/settings/pressure_jump.rst.txt
:orphan:

.. _pressure_jump:

pressure_jump
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.pressure_jump
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_32>`                                                                 Select polynomial method.

:ref:`function_of <function_of>`                                Specify what variable this object is a function of.

:ref:`value <value_17>`                                                    Specify value as constant or expression.

:ref:`udf <udf_1>`                                                                           User defined function.

:ref:`piecewise_polynomial <piecewise_polynomial_1>`                                 Piecewise polynomial settings.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

====================================================   ============================================================

.. rubric:: Included in:

================================================================   ==========================================================

Parent                                                                                                                Summary

================================================================   ==========================================================
:ref:`momentum <momentum>`                                             Allows to change momentum model variables or settings.

:ref:`pressure_jump_specification <pressure_jump_specification>`                        Pressure jump specification settings.

:ref:`momentum_2 <momentum_2>`                                         Allows to change momentum model variables or settings.

================================================================   ==========================================================

